<resources>
    <string name="app_name">Expenses Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_text">Log in</string>
    <string name="signup_text">Sign up</string>
    <string name="button_income">Income</string>
    <string name="button_expense">Expense</string>
    <string name="edit_dec_income">Income Value</string>
</resources>
