<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context="de.htwberlin.expensetracker.UserLogin">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/loginBookLogo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/budgetbook" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_twenty"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginEnd="@dimen/margin_end"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/margin_twenty"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="@dimen/padding_eight" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginEnd="@dimen/margin_end"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/margin_twenty"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_eight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/padding_eight"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_ten"
                android:background="@drawable/login_button_background"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:textSize="21sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_ten"
                android:background="@drawable/login_button_background"
                android:text="@string/signup_text"
                android:textAllCaps="false"
                android:textSize="21sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
